visao geral edit, steam button, header att, final step pag home

--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -4,5 +4,10 @@
             <img class="logo" src="assets/img/logo_oficial_semfundo.png" alt="">
         </a>
     </span>
+    <div class="jogosmenu">
+        <app-menu></app-menu>
+        
+
+    </div>
   
 </mat-toolbar>
