--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -5,17 +5,15 @@
                 <i class="material-icons">
                     home
                 </i>
-                <!-- <div class="nomelogo">
-                    <h1>Inicio</h1>
-                </div> -->
+                
             </a>
-            <a mat-list-item>
+            <a href="https://instagram.com/l.productions.studio?igshid=MzRlODBiNWFlZA==" target="_blank" mat-list-item>
                 <i class="logo-insta">
                     <img src="assets/img/insta_icon.png" alt="">
                 </i>
                 
             </a>
-            <a mat-list-item>
+            <a href="https://www.tiktok.com/@lproductionsgames?_t=8fq0OPGJWsg&_r=1" target="_blank" mat-list-item>
                 <i class="logo-tiktok">
                     <img src="assets/img/tik-tok_logo.png" alt="">
                 </i>
