--- a/frontend/src/app/components/template/visao-geral/visao-geral.component.html
+++ b/frontend/src/app/components/template/visao-geral/visao-geral.component.html
@@ -18,3 +18,5 @@
         <img src="../../../assets/img/uriel_idle.gif" alt="">
     </div>
 </div>
+<app-slideshow></app-slideshow>
+<app-steam></app-steam>
