--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -9,3 +9,19 @@
     padding-top: 10px;
     max-width: 135px;
 } 
+
+.jogosmenu {
+    width: 80px;
+    height: 50px;
+    margin-left: 1000px;
+    text-align: center;
+
+}
+
+h1 {
+    color: #fff;
+    font-size: 20px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    
+}
