--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
 </head>
+
 <body>
     <div class="container">
         <div class="nomejogo">
             <img src="assets/img/logojogo-semfundo.png">
         </div>
-    
+
         <div class="trailer">
-            <video controls >
+            <video controls>
                 <source src="assets/video/trailer-portugues.mp4" type="video/mp4">
-                    
+
             </video>
         </div>
     </div>
 
     <div class="h1texto">
     </div>
-    <app-visao-geral>
-  
-    </app-visao-geral>
 
-    
-    
+    <app-visao-geral class="app-visao-geral"></app-visao-geral>
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
