Finalização do site

--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -6,6 +6,7 @@
     </span>
     <div class="jogosmenu">
         <app-menu></app-menu>
+        <app-contato></app-contato>
         
 
     </div>
