--- a/frontend/src/app/components/template/header/menu/menu.component.html
+++ b/frontend/src/app/components/template/header/menu/menu.component.html
@@ -1,5 +1,6 @@
-<button mat-button [matMenuTriggerFor]="menu" style="color: white;" >Jogos</button>
+<button class="butao" mat-button [matMenuTriggerFor]="menu" style="color: white;">Jogos</button>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item>Flux - coming soon!</button>
+  <button mat-menu-item>Flux - Coming soon!</button>
 </mat-menu>
-<a mat-raised-button href="https://www.google.com/" target="_blank">PixelArt</a>
+
+<a mat-raised-button href="https://l-productions.itch.io/" target="_blank">PixelArt</a>
