--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -3,7 +3,9 @@
         <mat-nav-list class="nav-list">
             <a mat-list-item >
                 <i class="material-icons">
-                    home
+                    <a (click)="reloadPage()">home</a>
+
+                    
                 </i>
                 
             </a>
