--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -17,11 +17,19 @@
 
 .container .sidenav .nav-list .material-icons  {
     color: white;
+    box-sizing: border-box; 
+    transition: transform 0.3s ease;
+}
+
+.container .sidenav .nav-list .material-icons:hover  {
+    transform: scale(1.3);
+
 }
 
 .container .sidenav .nav-list a h1  {
     font-size: 16px;
-    color: white
+    color: white;
+   
 }
 
 .container .sidenav .nav-list .nomelogo {
@@ -32,5 +40,11 @@
 
 .container .sidenav .nav-list i {
     padding-right: 10px;
+    box-sizing: border-box; 
+    transition: transform 0.3s ease;
 }
 
+.container .sidenav .nav-list i :hover {
+    transform: scale(1.3);
+
+}
