--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="trailer">
-            <video controls>
+            <video controls  muted >
                 <source src="assets/video/trailer-portugues.mp4" type="video/mp4">
 
             </video>
